--- a/index.html
+++ b/index.html
@@ -5,16 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini Vue</title>
 </head>
+<style>
+    .btn{
+        margin-top: 10px;
+    }
+</style>
 <body>
     <div id="app">
         <h1>差值表达式</h1>
         <h3>{{ msg }}</h3>
         <h3>{{ count }}</h3>
+        <h1>v-html</h1>
+        <div v-html="cnt"></div>
         <h1>v-text</h1>
         <div v-text="msg"></div>
         <h1>v-model</h1>
         <input type="text" v-model="msg"/>
         <input type="text" v-model="count"/>
+        <div class='btn'>
+          <button v-on:click='handlerClick'>Button</button>
+        </div>
     </div>
     <script  src='js/dep.js'></script>
     <script  src='js/watcher.js'></script>
@@ -27,8 +37,12 @@
             data: {
                 msg:'hello',
                 count: 20,
+                cnt:'html cnt',
                 person:{
                   name:'tom'
+                },
+                handlerClick(){
+                    console.log('button click');
                 }
             }
         })
